<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#750505"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/back"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_arrow_back_ios_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:textAlignment="textStart"
            android:layout_marginStart="65dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/asul"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rembulan">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rembulan"
            android:textColor="@color/white"
            android:fontFamily="@font/asul"
            android:textSize="23sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAlignment="textStart">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/asul"
                android:text="@string/directorrembulan"
                android:textColor="@color/white">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="10dp">
            </TextView>
            <ImageView
                android:layout_marginTop="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_star_rate_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:fontFamily="@font/asul"
                android:text=" 4.7"
                android:textSize="17dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/genre"
                android:layout_marginLeft="5dp"
                android:text="Drama"
                android:textColor="@color/white"
                android:fontFamily="@font/asul">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/genre"
                android:layout_marginLeft="5dp"
                android:text="Action"
                android:textColor="@color/white"
                android:fontFamily="@font/asul">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/genre"
                android:layout_marginLeft="5dp"
                android:text="Comedy"
                android:textColor="@color/white"
                android:fontFamily="@font/asul">
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/asul"
            android:textColor="@color/white"
            android:textSize="21sp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/asul"
            android:text="@string/storyrembulan"
            android:textColor="@color/white">
        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gettiket"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/genre"
            android:text="Get Ticket"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/asul"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>