<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#750505"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginStart="40dp"
            android:text="@string/methodpayment"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:fontFamily="@font/asul"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/asul"
                android:text="Pilih Judul"
                android:textColor="@color/white"
                android:textSize="22sp">
            </TextView>
            <Spinner
                android:id="@+id/spinjudul"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner2">
            </Spinner>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/asul"
                android:text="@string/bioskop"
                android:textColor="@color/white"
                android:textSize="22sp">
            </TextView>

            <Spinner
                android:id="@+id/spinbioskop"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner2"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/asul"
                android:text="@string/seat"
                android:textColor="@color/white"
                android:textSize="22sp">
            </TextView>
            <Spinner
                android:id="@+id/spinseat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner2">
            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/asul"
                android:text="@string/tanggal"
                android:textColor="@color/white"
                android:textSize="22sp">
            </TextView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <DatePicker
                    android:id="@+id/date_pick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:calendarTextColor="@color/white"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:textColor="@color/white">
                </DatePicker>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/asul"
                android:text="@string/waktu"
                android:textColor="@color/white"
                android:textSize="22sp"></TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TimePicker
                    android:id="@+id/time_pick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarTextColor="@color/white"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:textColor="@color/white"
                    android:timePickerMode="spinner">
                </TimePicker>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">
                <TextView
                    android:id="@+id/jenis_seat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/asul"
                    android:text="Reguler Seat"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
                <TextView
                    android:id="@+id/harga_seat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/asul"
                    android:text="Rp40.000"
                    android:textColor="@color/white"
                    android:textSize="22dp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/asul"
                    android:text="Actual Pay"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
                <TextView
                    android:id="@+id/harga_seat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/asul"
                    android:text="Rp40.000"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/asul"
                android:text="Add Payment Method"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinpayment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner2">
            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <Spinner
                    android:id="@+id/spinbank"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/spinner2">
                </Spinner>
                <EditText
                    android:id="@+id/akunnumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/spinner2"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:hint="Account Number"
                    android:paddingStart="10dp">
                </EditText>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/spinner2"
                android:text="Order Summary"
                android:textColor="@color/black"
                android:fontFamily="@font/asul"
                android:textSize="30dp">
            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
    </ScrollView>


</LinearLayout>